Carousel indicator overlapping and Home_Carousel indicators fixed

--- a/src/styles/components/home_page/carousel_products.scss
+++ b/src/styles/components/home_page/carousel_products.scss
@@ -100,6 +100,7 @@
   }
 
   .swiper-wrapper {
+    position: relative;
     margin-bottom: 2px !important;
   }
 }
